# tom.camp

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  docker-publish.yml
app/: go.mod  go.sum  main.go  main.py
app/content/journal/: models.go
app/models/: base.py  post.py
app/routes/: post_routes.py
app/schemas/: post_schemas.py
app/services/: post_service.py
app/static/css/: style.css  style.css.map  style.scss
app/system/config/: db.go  tpl.go
app/system/users/: authentication.go  cookies.go  users.go
app/templates/: base.html  error.html  index.gohtml  index.html
app/templates/common/: footer.html  header.html
app/templates/components/: post_list_item.html  (+2 more)
app/utils/: auth.py  config.py  database.py  helpers.py  logging_config.py
migrations/: env.py
migrations/versions/: 0001_initial.py  9bcfed102a42_add_is_published_to_post.py
mongodata/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-2850439011457102934.wt  collection-2-2850439011457102934.wt  index-1-2850439011457102934.wt  index-3-2850439011457102934.wt  index-6-2850439011457102934.wt  sizeStorer.wt
mongodata/diagnostic.data/: metrics.2020-10-27T02-03-10Z-00000  metrics.2020-10-27T13-10-16Z-00000  metrics.2020-10-28T03-56-28Z-00000
tests/: conftest.py  test_helpers.py  test_routes.py  test_services.py
theme/default/: package-lock.json
(+3 files in other folders)
