[project]
name = "tom-camp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-slugify>=8.0.4",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytailwindcss>=0.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
